--- a/src/app/views/horas/registraHora.marko
+++ b/src/app/views/horas/registraHora.marko
@@ -1,115 +1,91 @@
 <!DOCTYPE html>
-<html lang="en" id="teste">
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" href="/estatico/estilo.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>apontamentoHoras</title>
+    <link rel="stylesheet" href="/estatico/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/estatico/assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="/estatico/assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="/estatico/assets/css/Dark-NavBar-1.css">
+    <link rel="stylesheet" href="/estatico/assets/css/Dark-NavBar-2.css">
+    <link rel="stylesheet" href="/estatico/assets/css/Dark-NavBar.css">
+    <link rel="stylesheet" href="/estatico/assets/css/Features-Boxed.css">
+    <link rel="stylesheet" href="/estatico/assets/css/Formulario-Farmacia.css">
+    <link rel="stylesheet" href="/estatico/assets/css/gradient-navbar-1.css">
+    <link rel="stylesheet" href="/estatico/assets/css/gradient-navbar.css">
+    <link rel="stylesheet" href="/estatico/assets/css/Lista-Productos-Canito.css">
+    <link rel="stylesheet" href="/estatico/assets/css/styles.css">
+    <link rel="stylesheet" href="/estatico/assets/css/untitled.css">
 </head>
 
-<body id="teste2">
-  <div class="container-formulario-insert" id="tabela">
-    <table class="table" >
-      <thead>
-        <tr>
-        <tr>Horas Apontadas</tr>
-        <th scope="col">Ordem</th>
-        <th scope="col">Projeto</th>
-        <th scope="col">Tempo</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">1</th>
-          <td>Alelo</td>
-          <td>8</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Porto Seguro</td>
-          <td>5</td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td>BRB</td>
-          <td>10</td>
-        </tr>
-        <tr>
-          <th scope="row">4</th>
-          <td>BRB</td>
-          <td>10</td>
-        </tr>
-        <tr>
-          <th scope="row">5</th>
-          <td>BRB</td>
-          <td>10</td>
-        </tr>
-        <tr>
-          <th scope="row">6</th>
-          <td>Alelo</td>
-          <td>8</td>
-        </tr>
-        <tr>
-          <th scope="row">7</th>
-          <td>Porto Seguro</td>
-          <td>5</td>
-        </tr>
-        <tr>
-          <th scope="row">8</th>
-          <td>BRB</td>
-          <td>10</td>
-        </tr>
-        <tr>
-          <th scope="row">9</th>
-          <td>BRB</td>
-          <td>10</td>
-        </tr>
-        <tr>
-          <th scope="row">10</th>
-          <td>BRB</td>
-          <td>10</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="container-formulario-insert" id="form1">
-    <figure class="cx-fotos-portugal">
-    </figure>
-    <form>
-      <div class="form-group">
-        <label for="inputProjeto">Nome do Projeto</label>
-        <select name="InputProjeto" id="comboProjeto">
-          <option value="teste">Alelo</option>
-          <option value="teste">Porto Seguro</option>
-          <option value="teste">BRB</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="inputProjeto">Digite a tarefa</label>
-        <select name="InputProjeto" id="ComboTarefa">
-          <option value="teste">Implatação</option>
-          <option value="teste">Alteração Verbalização</option>
-          <option value="teste">Alteração de API </option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="inputTempoUsado">Tempo Usado</label>
-        <input type="text" class="form-control" maxlength="2" id="inputTempoUsado">
-      </div>
-      <div class="form-group">
-        <label for="inputData">Data</label>
-        <input type="date" class="form-control" id="inputData">
-      </div>
-      <div class="form-group">
-        <label for="exampleFormNotas">Notas</label>
-        <textarea class="form-control" id="exampleFormNotas" maxlength="199" rows="4"></textarea>
-      </div>
-      <button type="submit" class="btn btn-primary">Salvar</button>
-    </form>
-  </div>
+<body style="width: auto;height: auto;">
+    <nav class="navbar navbar-dark navbar-expand-md" id="app-navbar" style="margin: 5px;width: auto;height: auto;padding: 1px;">
+        <div class="container-fluid"><a class="navbar-brand" href="#"><i class="icon ion-ios-infinite" id="brand-logo"></i></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div
+                class="collapse navbar-collapse" id="navcol-1">
+                <ul class="nav navbar-nav ml-auto">
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="/home">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#">Meus Dados</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#">Logout</a></li>
+                </ul>
+        </div>
+        </div>
+    </nav>
+    <div style="width: auto;height: auto;">
+        <div class="container" style="width: auto;height: auto;">
+            <div class="row" style="width: auto;height: auto;">
+                <div class="col-md-4 col-lg-10" style="width: auto;height: auto;">
+                    <h2 style="width: 343px;">Apontamento de Horas</h2>
+                </div>
+                <div class="col-md-4 col-lg-2 d-flex justify-content-center align-items-center" style="width: auto;height: auto;"><button class="btn btn-primary d-flex align-items-center align-self-center" type="button" style="height: 38px;background-color: rgb(21,221,4);">SALVAR&nbsp;<i class="fa fa-plus-circle"></i></button></div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <form method="post">
+                    <div class="form-row">
+                        <div class="col-md-12 col-lg-12">
+                            <div class="form-group">
+                                <div class="col-sm-4"><label class="col-form-label" style="font-family:Lato, sans-serif;font-weight:normal;" for="nombre">Projeto</label></div>
+                                <div class="col-sm-8" id="projeto" name="projeto"><select class="form-control" id="projeto" name="projeto">
+                                  <optgroup label="Projetos">
+                                    <option for(projetos in data.projetos) value='${projetos.id}'>${projetos.titulo}</option>
+                                  </optgroup>
+                                </select>
+                              </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-sm-4"><label class="col-form-label" style="font-family:Lato, sans-serif;font-weight:normal;" for="titular">Tempo Utilizado (em horas)</label></div>
+                                <div class="col-sm-4 col-lg-2"><input class="form-control" type="text" id="tempoUtilizado" name="titular" style="width: auto;height: auto;"></div>
+                                <div class="col-sm-4"><label style="font-family:Lato, sans-serif;font-weight:normal;" for="nombre">Atividade</label>
+                                  <select class="form-control" id="tarefa" name="tarefa">
+                                    <optgroup label="Tipos de atividades">
+                                      <option for(atividade in data.atividades) value='${atividade.id}'>${atividade.atividade}</option>
+                                    </optgroup>
+                                  </select>
+                                </div>
+                                <div class="col-lg-2">
+                                  <label style="font-family:Lato, sans-serif;font-weight:normal;" for="nombre">Data da Execução</label>
+                                  <input class="form-control" type="date">
+                                </div>
+                            <div class="col-lg-6">
+                              <label style="font-family:Lato, sans-serif;font-weight:normal;" for="nombre">Descrição ou Observação</label>
+                              <textarea class="form-control" id="anotacao" name="anotacao"></textarea>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+            </form>
+        </div>
+    </div>
+    </div>
+    <script src="/estatico/assets/js/jquery.min.js"></script>
+    <script src="/estatico/assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/estatico/assets/js/novoProjeto.js"></script>
 </body>
 
 </html>
