--- a/src/app/views/horas/registraHora.marko
+++ b/src/app/views/horas/registraHora.marko
@@ -18,11 +18,12 @@
     <link rel="stylesheet" href="/estatico/assets/css/Lista-Productos-Canito.css">
     <link rel="stylesheet" href="/estatico/assets/css/styles.css">
     <link rel="stylesheet" href="/estatico/assets/css/untitled.css">
+    <link rel="stylesheet" href="/estatico/assets/css/calendario.css">
 </head>
 
 <body style="width: auto;height: auto;">
     <nav class="navbar navbar-dark navbar-expand-md" id="app-navbar" style="margin: 5px;width: auto;height: auto;padding: 1px;">
-        <div class="container-fluid"><a class="navbar-brand" href="#"><i class="icon ion-ios-infinite" id="brand-logo"></i></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container-fluid"><a class="navbar-brand" href="/home"><i class="icon ion-ios-infinite" id="brand-logo"></i></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
@@ -39,53 +40,93 @@
                 <div class="col-md-4 col-lg-10" style="width: auto;height: auto;">
                     <h2 style="width: 343px;">Apontamento de Horas</h2>
                 </div>
-                <div class="col-md-4 col-lg-2 d-flex justify-content-center align-items-center" style="width: auto;height: auto;"><button class="btn btn-primary d-flex align-items-center align-self-center" type="button" style="height: 38px;background-color: rgb(21,221,4);">SALVAR&nbsp;<i class="fa fa-plus-circle"></i></button></div>
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <form method="post">
-                    <div class="form-row">
-                        <div class="col-md-12 col-lg-12">
-                            <div class="form-group">
-                                <div class="col-sm-4"><label class="col-form-label" style="font-family:Lato, sans-serif;font-weight:normal;" for="nombre">Projeto</label></div>
-                                <div class="col-sm-8" id="projeto" name="projeto"><select class="form-control" id="projeto" name="projeto">
-                                  <optgroup label="Projetos">
-                                    <option for(projetos in data.projetos) value='${projetos.id}'>${projetos.titulo}</option>
-                                  </optgroup>
-                                </select>
-                              </div>
+    <div>
+        <div class="container">
+            <div class="row" style="margin: 1px;padding: 0px;">
+                <div class="col-md-5 col-lg-5 offset-lg-4" style="margin: 5px;padding: 1px;">
+                    <div class="table-responsive" style="font-size: 9px;">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>Dom</th>
+                                    <th>Seg</th>
+                                    <th>Ter</th>
+                                    <th>Qua</th>
+                                    <th>Qui</th>
+                                    <th>Sex</th>
+                                    <th>Sab</th>
+                                </tr>
+                            </thead>                            
+                            <tbody>  
+                              <ol type="I">
+                               <tr for|i| from=0 to=5>
+                                    <td for|j| from=0 to=7><p>---</p></td>
+                               </tr>       
+                              </ol>        
+                            </tbody>     
+                        </table>
+                    </div>
+                </div>
+                <div class="col">
+                    <form>
+                        <div class="form-group">
+                            <div class="form-row">
+                                <div class="col" style="width: 100%;">
+                                    <p>Cliente<select class="form-control" id="cliente" style="width: 100%;" name="cliente">
+                                      <optgroup label="Clientes Cadastrados">
+                                        <option value="0" selected>Selecione...</option>
+                                        <option for(clientes in data.clientes) value="${clientes.id}">${clientes.nome}</option>
+                                      </optgroup>
+                                    </select>
+                                  </p>
+                                </div>
                             </div>
-                            <div class="form-group">
-                                <div class="col-sm-4"><label class="col-form-label" style="font-family:Lato, sans-serif;font-weight:normal;" for="titular">Tempo Utilizado (em horas)</label></div>
-                                <div class="col-sm-4 col-lg-2"><input class="form-control" type="text" id="tempoUtilizado" name="titular" style="width: auto;height: auto;"></div>
-                                <div class="col-sm-4"><label style="font-family:Lato, sans-serif;font-weight:normal;" for="nombre">Atividade</label>
-                                  <select class="form-control" id="tarefa" name="tarefa">
-                                    <optgroup label="Tipos de atividades">
-                                      <option for(atividade in data.atividades) value='${atividade.id}'>${atividade.atividade}</option>
-                                    </optgroup>
-                                  </select>
+                            <div class="form-row">
+                                <div class="col">
+                                    <p>Projeto<select class="form-control" id="projeto" style="width: 100%;" name="projeto">
+                                      <optgroup label="Projetos atribuídos à você">
+                                        <option value="0" selected>Selecione...</option>
+                                        <option for(projetos in data.projetos) value="${projetos.id}">${projetos.titulo}</option>
+                                      </optgroup>
+                                    </select>
+                                  </p>
                                 </div>
-                                <div class="col-lg-2">
-                                  <label style="font-family:Lato, sans-serif;font-weight:normal;" for="nombre">Data da Execução</label>
-                                  <input class="form-control" type="date">
+                            </div>
+                            <div class="form-row">
+                                <div class="col">
+                                    <p>Atividade<select class="form-control" id="atividade" name="atividade">
+                                      <optgroup label="Clientes que você pode atender">
+                                        <option value="0" selected>Selecione...</option>
+                                        <option for(atividades in data.atividades) value="${atividades.id}">${atividades.atividade}</option>
+                                      </optgroup>
+                                    </select>
+                                  </p>
                                 </div>
-                            <div class="col-lg-6">
-                              <label style="font-family:Lato, sans-serif;font-weight:normal;" for="nombre">Descrição ou Observação</label>
-                              <textarea class="form-control" id="anotacao" name="anotacao"></textarea>
+                            </div>
+                            <div class="form-row">
+                                <div class="col">
+                                    <p>Tempo(hrs)<input class="form-control" type="text" id="tempo" style="width: 100%;" name="tempo"></p>
+                                </div>
+                                <div class="col">
+                                    <p>Data Execução<input class="form-control" id="data" type="date" style="width: 100%;" name="data"></p>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="col">
+                                    <p>Descrição da Atividade<textarea class="form-control" id="descricao" style="width: 100%;" name="descricao"></textarea></p>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    </form><button class="btn btn-primary d-flex align-items-center align-self-center" type="button" style="height: 38px;background-color: rgb(4,91,221);filter: invert(0%);">SALVAR&nbsp;<i class="fa fa-plus-circle"></i></button></div>
             </div>
-            </form>
         </div>
     </div>
-    </div>
-    <script src="/estatico/assets/js/jquery.min.js"></script>
-    <script src="/estatico/assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/estatico/assets/js/novoProjeto.js"></script>
+    <script src="/estatico//estatico/assetsjs/jquery.min.js"></script>
+    <script src="/estatico//estatico/assetsbootstrap/js/bootstrap.min.js"></script>
+    <script src="/estatico//estatico/assetsjs/novoProjeto.js"></script>
 </body>
 
 </html>
