--- a/src/app/views/projetos/listaProjetos.marko
+++ b/src/app/views/projetos/listaProjetos.marko
@@ -10,24 +10,28 @@
     <link rel="stylesheet" href="/estatico/assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="/estatico/assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="/estatico/assets/fonts/ionicons.min.css">
-    <link rel="stylesheet" href="/estatico/assets/fonts/simple-line-icons.min.css">
     <link rel="stylesheet" href="/estatico/assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="/estatico/assets/css/Custom-Card.css">
+    <link rel="stylesheet" href="/estatico/assets/css/Dark-NavBar-1.css">
+    <link rel="stylesheet" href="/estatico/assets/css/Dark-NavBar-2.css">
+    <link rel="stylesheet" href="/estatico/assets/css/Dark-NavBar.css">
+    <link rel="stylesheet" href="/estatico/assets/css/Features-Boxed.css">
     <link rel="stylesheet" href="/estatico/assets/css/gradient-navbar-1.css">
     <link rel="stylesheet" href="/estatico/assets/css/gradient-navbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="/estatico/assets/css/progress-bars.css">
+    <link rel="stylesheet" href="/estatico/assets/css/Lista-Productos-Canito.css">
     <link rel="stylesheet" href="/estatico/assets/css/Steps-Progressbar.css">
     <link rel="stylesheet" href="/estatico/assets/css/styles.css">
+    <link rel="stylesheet" href="/estatico/assets/css/untitled.css">
 </head>
 
-<body>
-    <nav class="navbar navbar-dark navbar-expand-md" id="app-navbar" style="width: auto;height: auto;margin: 5px;padding: 1px;">
+<body style="width: auto;height: auto;">
+    <nav class="navbar navbar-dark navbar-expand-md" id="app-navbar" style="margin: 5px;width: auto;height: auto;padding: 1px;">
         <div class="container-fluid"><a class="navbar-brand" href="#"><i class="icon ion-ios-infinite" id="brand-logo"></i></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="/home">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="/homel">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#">Meus Dados</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#">Logout</a></li>
                 </ul>
@@ -38,29 +42,26 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h1>Lista de Projetos</h1>
+                    <h1>Lista Projetos</h1>
                 </div>
-                <div class="col-md-6 col-lg-5 text-right align-self-center" style="padding: 0px;"><button class="btn btn-primary" type="button">Novo Projeto&nbsp;<i class="icon-plus"></i></button></div>
+                <div class="col-md-6 col-lg-5 text-right" style="width: auto;height: auto;margin: 1px;padding: 1px;"><button class="btn btn-primary" type="button">Nov Projeto&nbsp;<i class="fa fa-plus"></i></button></div>
             </div>
         </div>
     </div>
     <div>
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 col-lg-5" style="width: auto;height: auto;padding: 1px;">
                     <div class="table-responsive">
                         <table class="table">
                             <thead>
                                 <tr>
-                                    <th>Projeto</th>
+                                    <th>Projetos</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td>Projeto 1 - Projeto Facil</td>
-                                </tr>
-                                <tr>
-                                    <td>Projeto 2 - Projeto mais complicado</td>
+                                <tr for (projetos in data.projetos)>
+                                    <td value"${projetos.id}">${projetos.titulo}</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -69,8 +70,7 @@
                 <div class="col-md-6">
                     <div class="row">
                         <div class="col">
-                            <h5>Passos do Projeto</h5>
-                            <div class="steps-progressbar">
+                            <div class="steps-progressbar"><strong>Etapas do Projeto</strong>
                                 <ul>
                                     <li class="previous">Item 1</li>
                                     <li class="active">Item 2</li>
@@ -81,50 +81,55 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col">
-                            <div class="row">
-                                <div class="col-md-4 col-lg-12">
-                                    <h5>Progresso</h5>
-                                    <div class="progress beautiful progress-lg">
-                                        <div class="progress-bar bg-danger" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">80%</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <div class="col"></div>
                     </div>
                     <div class="row">
                         <div class="col">
-                            <div class="card">
+                            <div class="card"><strong>Detalhes</strong>
                                 <div class="card-header"><a class="btn header-arrow-btn" role="button" data-toggle="collapse" href="#detailed-view"><i class="fa fa-chevron-right"></i><i class="fa fa-chevron-down"></i></a><span>Sample-Card</span>
                                     <div class="btn-group custom-btngrp"
                                         role="group"><button class="btn btn-outline-primary" type="button"><i class="fa fa-tasks"></i><span>Editar</span></button><button class="btn btn-outline-danger" type="button"><i class="fa fa-trash"></i><span>Deletar</span></button>
                                         <div
                                             class="dropdown btn-group no-arrow" role="group"><button class="btn btn-outline-primary dropdown-toggle border-primary" data-toggle="dropdown" aria-expanded="false" type="button"><i class="fas fa-ellipsis-h" data-bs-hover-animate="rubberBand"></i></button>
                                             <div
-                                                class="dropdown-menu dropdown-menu-right animated--fade-in" role="menu"><a class="dropdown-item" role="presentation" href="#">Change Log</a><a class="dropdown-item" role="presentation" href="#">Duplicate</a>
-                                                <div class="dropdown-divider"></div><a class="dropdown-item" role="presentation" href="#">Action</a></div>
+                                                class="dropdown-menu dropdown-menu-right animated--fade-in" role="menu"><a class="dropdown-item" role="presentation" href="#">Iniciar</a><a class="dropdown-item" role="presentation" href="#">Pausar</a>
+                                                <div class="dropdown-divider"></div><a class="dropdown-item" role="presentation" href="#">Encerrar</a></div>
                                 </div>
                             </div>
                         </div>
                         <div class="card-body collapse show" id="detailed-view">
                             <div>
                                 <ul class="nav nav-tabs">
-                                    <li class="nav-item"><a class="nav-link active" role="tab" data-toggle="tab" href="#tab-1">Dados Atuais</a></li>
-                                    <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-2">Dados Estimados</a></li>
+                                    <li class="nav-item"><a class="nav-link active" role="tab" data-toggle="tab" href="#tab-1">Overview</a></li>
+                                    <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-2">Atividades</a></li>
                                 </ul>
                                 <div class="tab-content">
                                     <div class="tab-pane active" role="tabpanel" id="tab-1">
                                         <div class="row">
                                             <div class="col-lg-6">
                                                 <div class="row">
-                                                    <div class="col-md-4 label-col"><label class="col-form-label">Inicio</label></div>
-                                                    <div class="col-md-8 data-col"><span>Sample User</span></div>
+                                                    <div class="col-md-4 label-col"><label class="col-form-label"><b>Dt.Inicio</b></label></div>
+                                                    <div class="col-md-8 data-col"><p>Sem data</p></div>
                                                 </div>
                                             </div>
                                             <div class="col-lg-6">
                                                 <div class="row">
-                                                    <div class="col-md-4 label-col"><label class="col-form-label">Person</label></div>
-                                                    <div class="col-md-8 data-col"><span>Sample User</span></div>
+                                                    <div class="col-md-4 label-col"><label class="col-form-label"><b>Dt.Fim</b></label></div>
+                                                    <div class="col-md-8 data-col"><p>Sem data</p></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-lg-6">
+                                                <div class="row">
+                                                    <div class="col-md-4 label-col"><label class="col-form-label"><b>Prev.Inicio</b></label></div>
+                                                    <div class="col-md-8 data-col"><p>01/10/2020</p></div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-6">
+                                                <div class="row">
+                                                    <div class="col-md-4 label-col"><label class="col-form-label"><b>Prev.Fim</b></label></div>
+                                                    <div class="col-md-8 data-col"><p>22/10/2020</p></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -143,6 +148,7 @@
     <script src="/estatico/assets/js/jquery.min.js"></script>
     <script src="/estatico/assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="/estatico/assets/js/bs-init.js"></script>
+    <script src="/estatico/assets/js/novoProjeto.js"></script>
 </body>
 
 </html>
