--- a/src/app/views/login.marko
+++ b/src/app/views/login.marko
@@ -11,7 +11,7 @@
 
 <body>
     <div class="login-dark">
-        <form method="post">
+        <form action="/login" method="post">
             <h2 class="sr-only">Login Form</h2>
             <div class="illustration"><i class="icon ion-ios-locked-outline"></i></div>
             <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Email" /></div>
