--- a/src/app/views/horas/registraHora.marko
+++ b/src/app/views/horas/registraHora.marko
@@ -71,7 +71,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <form>
+                    <form method="post" action="/apontamento">
                         <div class="form-group">
                             <div class="form-row">
                                 <div class="col" style="width: 100%;">
@@ -120,7 +120,7 @@
                                 </div>
                             </div>
                         </div>
-                    </form><button class="btn btn-primary d-flex align-items-center align-self-center" type="button" style="height: 38px;background-color: rgb(4,91,221);filter: invert(0%);">SALVAR&nbsp;<i class="fa fa-plus-circle"></i></button></div>
+                    </form><input class="btn btn-primary d-flex align-items-center align-self-center" type="button" style="height: 38px;background-color: rgb(4,91,221);filter: invert(0%);" value="SALVAR"/></div>
             </div>
         </div>
     </div>
